bk_ida/gccida/c3/df_reg_use_gen
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_reg_use_gen/src/df.c:1101:30: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( USE, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v2), v2); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_reg_use_gen/src/df.c:1101:45: error: expected expression
return gen_rtx_fmt_e( USE, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v2), v2); 
                                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_reg_use_gen/src/obj/df.o] Error 1
